--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     justify-content: space-between;
     padding: 20px 60px;
     align-items: center;
+    background-color: red;
 }
 .header I{
     display: none;
